<resources>
    <string name="app_name">Geocache</string>
    <string name="action_settings">Settings</string>
    <string name="geocache1">The Chief</string>
    <string name="geocache2">Brandywine Falls</string>
    <string name="geocache3">Lighthouse Park</string>
    <string name="geocache4">Shannon Falls</string>
    <string name="geocache5">The Westcoast Trail</string>
    <string name="geocache6">Lake Ann</string>
    <string name="title_activity_geocache1">THE CHIEF</string>
    <string name="title_activity_geocache2">BRANDYWINE FALLS</string>
    <string name="title_activity_geocache3">LIGHTHOUSE PARK</string>
    <string name="title_activity_geocache4">SHANNON FALLS</string>
    <string name="title_activity_geocache5">THE WESTCOAST TRAIL</string>
    <string name="title_activity_geocache6">LAKE ANN</string>
    <string name="title_activity_map1">Map 1</string>
    <string name="title_activity_map2">Map 2</string>
    <string name="title_activity_my">MyActivity</string>
</resources>
