<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MY GEOCACHES"
            android:textSize="17dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache1"
            android:layout_centerHorizontal="true"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button1"
            android:onClick="openHint1"
            android:layout_marginTop="80dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache2"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button2"
            android:onClick="openHint2"
            android:layout_marginTop="130dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache3"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button3"
            android:onClick="openHint3"
            android:layout_marginTop="180dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache4"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button4"
            android:onClick="openHint4"
            android:layout_marginTop="230dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache5"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button5"
            android:onClick="openHint5"
            android:layout_marginTop="280dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/geocache6"
            android:textColor="#246e9d"
            android:background="#ffffff"
            android:id="@+id/button6"
            android:onClick="openHint6"
            android:layout_marginTop="330dp" />

</RelativeLayout>
