<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_menu" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MY GEOCACHES"
        android:textSize="17dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/geocache1"
        android:textColor="#246e9d"
        android:background="#ffffff"
        android:id="@+id/button1"
        android:onClick="openHint1"
        android:layout_marginTop="80dp" />

    <Button
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/geocache2"
        android:textColor="#246e9d"
        android:background="#ffffff"
        android:id="@+id/button2"
        android:onClick="openHint2"
        android:layout_marginTop="130dp" />

    <Button
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/geocache3"
        android:textColor="#246e9d"
        android:background="#ffffff"
        android:id="@+id/button3"
        android:onClick="openHint3"
        android:layout_marginTop="180dp" />

    <Button
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/geocache4"
        android:textColor="#246e9d"
        android:background="#ffffff"
        android:id="@+id/button4"
        android:onClick="openHint4"
        android:layout_marginTop="230dp" />

    <CheckBox
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:id="@+id/checkbox1"/>

    <CheckBox
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:id="@+id/checkbox2"/>

    <CheckBox
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:id="@+id/checkbox3"/>

    <CheckBox
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="233dp"
        android:id="@+id/checkbox4"/>


</RelativeLayout>
